--- a/contextmenu.css
+++ b/contextmenu.css
@@ -25,6 +25,8 @@ contextMenu .menu {
     display:flex;
     opacity: 0;
     left:-1000px;
+    min-width:max-content;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px, rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 
 contextMenu .menu.open{
@@ -39,6 +41,7 @@ contextMenu .menu.open{
     border:none;
     text-align: left;
     padding: 8px 50px;
+    word-break: break-word;
 }
 
 contextMenu .menu button * { /* Inside button */
